@@ -1,33 +1,35 @@
 package com.tukY.Lab2;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.regex.Pattern;
-import java.util.stream.Stream;
+import java.util.*;
 
 public class Main {
+    static List<String> generateWords(List<String> pwords, char[] alphabet, int len0, int len1){
+        if (len0 == len1)
+            return pwords;
 
-    final static String re_LETTERS = "[a-zA-Z]";
+        List<String> words = new ArrayList<>();
 
-    public static List<String> generateWords(int len){
+        for (var word : pwords){
+            for (var c : alphabet){
+                words.add(word + c);
+            }
+        }
+
+        return generateWords(words, alphabet, len0, len1+1);
+    }
+
+    public static List<String> generateWords(String alphabet, int len){
         if(len < 1)
             return new ArrayList<>();
 
-        var pattern = Pattern.compile(re_LETTERS);
-        var words = Arrays.asList(pattern.pattern().split(""));
-
-        for (int i = 1; i < len; ++i){
-            words.forEach(w ->{
-                Stream.of(pattern.pattern())
-                        .forEach(s -> words.add(w.concat(s)));
-                words.remove(w);
-            });
-        }
-
-        return words;
+        return generateWords(List.of(alphabet.split("")), alphabet.toCharArray(), len, 1);
     }
 
+    /**
+     * @param FSM Finite State Machine
+     * @param words Collection of strings to check
+     * @return if all of words are possible at FSM
+     */
     public static boolean isPossibleInFSM(FiniteStateMachine FSM, Iterable<String> words){
         for (var w : words)
             if (!FSM.isPossible(w))
@@ -36,7 +38,7 @@ public class Main {
         return true;
     }
 
-    /*
+    /**
      *  Lab 9 : find out if ALL words of len k (1) are possible in Finite State Machine (0)
      *
      *  Input Args:
@@ -45,9 +47,10 @@ public class Main {
      *
      */
     public static void main(String[] args) {
-        System.out.print(
-                isPossibleInFSM(new FiniteStateMachine(args[0])
-                , generateWords(Integer.getInteger(args[1])))
-        );
+        FiniteStateMachine fsm = new FiniteStateMachine(args[0]);
+
+        List<String> words = generateWords(fsm.getAlphabet(), Integer.parseInt(args[1]));
+
+        System.out.print(isPossibleInFSM(fsm, words));
     }
 }
